# chotop

./: .gitignore  Cargo.toml  README.md  install.sh
aur-package/: .SRCINFO  PKGBUILD  README-AUR.md
src/: avatar_cache.rs  config.rs  config_app.rs  config_gui.rs  control_ipc.rs  control_window.rs  discord_data.rs  ipc.rs  main.rs  notification_window.rs  overlay_window.rs  renderer.rs  style.css
